[package]
name = "sf-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backoff = { version = "0.4", features = ["futures", "futures-core", "pin-project-lite", "tokio", "tokio_1"] }
eyre = "0.6.8"
futures = "0.3.23"
jsonrpsee = { version = "0.16.2", features = ["full"] }
sui-json-rpc = { path = "../sui-json-rpc" }
sui-json-rpc-types = { path = "../sui-json-rpc-types" }
sui-indexer = { path = "../sui-indexer" }
tokio = { workspace = true, features = ["full"] }
